style.css
html {
    height: 100%;
    width: 100%;
    background-image: linear-gradient(to bottom, #0d0e11, #153947, #006a6d, #3f9d72, #a8c863);
}

body, html {
    margin: 0;
    padding: 0;
    height: auto;
    width: auto;
}

#wrapper {
    display: block;
    height: 100%;
    width: 100%;
}

#header{
    text-align: center;
    font-size: 300%;
    font-family: 'Orbitron', sans-serif;
    height: 80px;
    margin-top: 35px;
    font-weight: bolder;
    width: 100%;
    color: white;
    text-shadow: 11px 8px 2px black;
    letter-spacing: 30px;
}

#subHeader {
    text-align: center;
    font-size: 175%;
    font-family: 'Courier New', Courier, monospace;
    font-weight: bolder;
    height: 80px;
    width: 100%;
    color: white;
    text-shadow: 11px 8px 2px black;
    letter-spacing: 15px;
    margin: 5px
}

#main {
    display: flex;
    align-items: center;
    flex-direction: column;

}

#calcWrap{
    font-family: 'Orbitron', sans-serif;
    display: flex;
    flex-direction: column;
    height: 670px;
    width: 565px;
    background-color: rgb(0, 0, 0);
    padding: 30px;
    border: 2px solid white;
    border-radius: 40px;
    color: white;
    align-items: center;
    box-shadow: 5px 5px 0px 4px #7d7d80,
                12px 12px 0px 1px black;
    margin-bottom: 16px; 
}

#outputWrap{
    font-size: 190%;
    font-family: monospace;
    text-align: right;
    padding: 10px;
    float: right;
    width: 500px;
    height: 75px;
    color: white;
    background-color: #47494a;
    font-weight: bolder;
    border-radius: 10px;
}

#calcInput {
    color: #b7c1c5;
    padding: 5px
}

#calcButtons {
    display: flex;
    flex-wrap: wrap;
    width: 500px;
    display: grid;
    text-align: center;
    justify-content: center;
    grid-gap: 25px;
    padding: 30px;
    grid-template-columns: repeat(4, 20fr);
}

.btn{
    height: 90px;
    width:90px;
    border-radius: 50%;
    border: 0;
    background-color: white;
    font-family: monospace;
    font-size: 220%;
    font-weight: bolder;
    outline: none;
    box-shadow: 5px 5px 0px 1px #7d7d80;
}

.btn:hover{
   transform: scale(1.03);
}
.btn:active{
    transform: scale(.97);
}

.btn2{
    height: 80px;
    width: 105px;
    border-radius: 10%;
    border: 0;
    background-color: #ff8f0f;
    font-family: monospace;
    font-size: 300%;
    font-weight: bolder;
    outline: none;
    box-shadow: 5px 5px 3px 1px #7d7d80;
}

.btn2:hover{
    transform: scale(1.03);
 }
 .btn2:active{
    transform: scale(.97);
 }

.btn3{
    height: 80px;
    width: 235px;
    border-radius: 20px;
    border: 0;
    background-color: #ff8f0f;
    grid-column: 3 / 5;
    font-family: monospace;
    font-size: 400%;
    font-weight: bolder;
    outline: none;
    box-shadow: 5px 5px 3px 1px #7d7d80;
}

.btn3:hover{
   transform: scale(1.03);
}

.btn3:active{
    transform: scale(.97);
}

#footer{
    display: flex;
    justify-content: center;
    flex-direction: row;
    font-family: 'Courier New', Courier, monospace;
    padding: 5px;
}

#signature{
    padding-right: 15px;
}

